# piemme

./: .gitignore  Cargo.toml  LICENSE  README.md  SPECS.md  TASKS.md  clippy.toml  install.sh  rustfmt.toml
.github/workflows/: ci.yml  release.yml
gifs/: generate-all.sh
gifs/fixtures/demo-piemme/: config.yaml
gifs/fixtures/demo-piemme/archive/: old_draft.md  q4_planning.md
gifs/fixtures/demo-piemme/folders/personal/: meal_planner.md  travel_plan.md
gifs/fixtures/demo-piemme/folders/work/: project_proposal.md  status_email.md
gifs/fixtures/demo-piemme/prompts/: base_context.md  code_review.md  debug_helper.md  debug_this.md  explain_eli5.md  explain_like_five.md  full_code_review.md  meeting_notes.md  meeting_summary.md  project_context.md  refactor_code.md  write_commit.md  write_tests.md
gifs/tapes/: 01-navigation.tape  02-create-edit.tape  02-create-prompt.tape  03-edit-prompt.tape  03-references.tape  04-commands.tape  04-fuzzy-search.tape  05-tags-filtering.tape  05-tags.tape  06-copy-to-clipboard.tape  06-folders-archive.tape  07-archive.tape  07-search-actions.tape  08-rename.tape  09-insert-reference.tape
src/: app.rs  config.rs  error.rs  main.rs  tui.rs
src/engine/: commands.rs  mod.rs  references.rs  resolver.rs
src/fs/: directory.rs  index.rs  mod.rs  prompt_io.rs
src/models/: action.rs  mod.rs  mode.rs  prompt.rs  state.rs
src/ui/: keybindings.rs  mod.rs  render.rs
src/ui/components/: editor.rs  help.rs  mod.rs  popup.rs  prompt_list.rs  status_bar.rs  title_bar.rs
